--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
        <div class="button is-hidden">Reset</div>
       </div>
     </div>
-    <script src="js/utils.js"></script>
-    <script src="js/autocomplete.js"></script>
-    <script src="js/app.js"></script>
+    <script src="utils.js"></script>
+    <script src="autocomplete.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
