--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>MovieFight</title>
+    <title>Fight It Out - Compare Movies & TV Series</title>
   </head>
   <body>
     <section class="hero is-primary is-bold">
       <div class="hero-body">
         <div class="container">
           <h1 class="title">
-            MovieFight
+            FightItOut
             <span class="icon">
               <i class="fas fa-film"></i>
             </span>
